correccion de errores

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                   <p>somos importantes importadores de argentina</p>
               </div>
               <div class="marcas_images">
-              <div class="marca"><img src="IMG\nike.png" alt=""></div>
+              <div class="marca"><img src="IMG\NIKE.png" alt=""></div>
               <div class="marca"><img src="IMG\Adidas.jpg" alt=""></div>
               <div class="marca"><img src="IMG\captain fin.png" alt=""></div>
               <div class="marca"><img src="IMG\lacoste.png" alt=""></div>
