--- a/signup.html
+++ b/signup.html
@@ -22,7 +22,7 @@
                 </p>
                 <p>
                     <a href="index.html"><button type="submit"> Ingresar </button></a>
-                    <a href="registrate.html"><button type="submit">registrate</button></a>
+                    <a href="signin.html"><button type="submit">registrate</button></a>
                 </p>
             </div>
             <div class="login__img">
