--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <li><a href="#Servicios">Servicios</a></li>
           <li><a href="#Productos">Productos</a></li>
           <li><a href="#Contacto">Contacto</a></li>
-          <li><a href="iniciosesion.html"><i class="fa-solid fa-user"></i></a></li>
+          <li><a href="signup.html"><i class="fa-solid fa-user"></i></a></li>
         </ul>
       </nav>
     </header>
